--- a/src/TestAnnotationsBundle/Resources/views/Default/name.html.twig
+++ b/src/TestAnnotationsBundle/Resources/views/Default/name.html.twig
@@ -1,8 +1,8 @@
 {% extends '::base.html.twig' %}
 
-
 {% block body %}
-    Name
+    <div class="text">Name</div>
+    <img src="{{ asset('favicon.ico') }}" />
     <br>
     {{ nPila }}
 {% endblock %}
