Vid 25. Routing & Response, redirect, not found and 404 error.

--- a/src/TestAnnotationsBundle/Resources/views/Default/redirection.html.twig
+++ b/src/TestAnnotationsBundle/Resources/views/Default/redirection.html.twig
@@ -2,5 +2,5 @@
 {% block body %}
     Esta es una redirección
     <br>
-    <a href="{{ path('paco_index') }}">Inicio</a>
+    <a href="{{ path('anno_index') }}">Inicio</a>
 {% endblock %}
