--- a/src/TestAnnotationsBundle/Resources/views/Default/name.html.twig
+++ b/src/TestAnnotationsBundle/Resources/views/Default/name.html.twig
@@ -4,5 +4,5 @@
     <div class="text">Name</div>
     <img src="{{ asset('favicon.ico') }}" />
     <br>
-    {{ argum }}
+    {{ arg }}
 {% endblock %}
