Vid 40. Using _locale in routes.

--- a/src/TestAnnotationsBundle/Resources/views/Company/getcompany.html.twig
+++ b/src/TestAnnotationsBundle/Resources/views/Company/getcompany.html.twig
@@ -4,3 +4,6 @@
 <ul>Name: {{ company.name }}</ul>
 <ul>City: {{ company.city }}</ul>
 <ul>Employees number: {{ company.employeesNumber }}</ul>
+
+<p>Locale:</p>
+<span>{{ locale|upper }}</span>
