--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -1,24 +1,23 @@
-{% extends ':security:body.html.twig' %}
+{% extends 'base.html.twig' %}
+
 {% block body %}
-<body>
+    {% if error %}
+        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+    {% endif %}
 
-{% if error %}
-    <div>{{ error.messageKey|trans(error.messageDate, 'security') }}</div>
-{% endif %}
-
-<form action="{{ path('login') }}" method="post">
-    <div class="form-group">
+    <form action="{{ path('login') }}" method="post">
         <label for="username">Username:</label>
-        <input type="text" id="username" name="_username" value="{{ last_username }}" class="form-control">
-    </div>
-    <div class="form-group">
+        <input type="text" id="username" name="_username" value="{{ last_username }}"/>
+
         <label for="password">Password:</label>
-        <input type="password" id="password" name="_password" class="form-control">
-    </div>
+        <input type="password" id="password" name="_password"/>
 
-<button type="submit" class="btn btn-default">Login</button>
-</form>
+        {#
+            If you want to control the URL the user
+            is redirected to on success (more details below)
+            <input type="hidden" name="_target_path" value="/account" />
+        #}
 
-
-</body>
+        <button type="submit">login</button>
+    </form>
 {% endblock %}
