Vid 60. Log out.

--- a/app/Resources/views/company/getcompany.html.twig
+++ b/app/Resources/views/company/getcompany.html.twig
@@ -1,3 +1,4 @@
+<body>
 <p>Company data:</p>
 
 <ul>ID: {{ company.id }}</ul>
@@ -7,3 +8,4 @@
 
 <p>Locale:</p>
 <span>{{ locale|upper }}</span>
+</body>
