--- a/app/Resources/views/security/login.html.twig
+++ b/app/Resources/views/security/login.html.twig
@@ -12,12 +12,9 @@
         <label for="password">Password:</label>
         <input type="password" id="password" name="_password"/>
 
-        {#
-            If you want to control the URL the user
-            is redirected to on success (more details below)
-            <input type="hidden" name="_target_path" value="/account" />
-        #}
+        {# Controlling the URL the user is redirected to on success #}
+        <input type="hidden" name="_target_path" value="{{ path('user_index') }}"/>
 
-        <button type="submit">login</button>
+        <button type="submit">Login</button>
     </form>
 {% endblock %}
