User implements Serializable. Now login can be through db or in_memory.

--- a/app/Resources/views/football/index.html.twig
+++ b/app/Resources/views/football/index.html.twig
@@ -1,1 +1,3 @@
-Creating controller from 'php bin/console generate:controller'.
+<body>
+<p>The controller has been created with the command 'php bin/console generate:controller'.</p>
+</body>
