--- a/app/Resources/views/security/admin.html.twig
+++ b/app/Resources/views/security/admin.html.twig
@@ -5,6 +5,8 @@
 
     <p>Private area.</p>
 
+    <h1>You're the boss ;)</h1>
+
     <a href={{ absolute_url("/users") }}>Free area</a>
     <a href={{ absolute_url("/users/logout") }}>Logout</a>
 
