Restructured twig code.

--- a/app/Resources/views/company/_footer.html.twig
+++ b/app/Resources/views/company/_footer.html.twig
@@ -1,42 +1,27 @@
+<br>
 <hr>
 <footer>
     <div class="container">
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <h3>About Us</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Pellentesque imperdiet consectetur dolor in elementum.</p>
+                <p>Lorem ipsum dolor sit amet.</p>
+                <pre>2018 - {{ "now"|date('Y') }}. All rights reserved ©.</pre>
             </div>
-            <div class="col-md-2 list">
+            <div class="col-md-4 ">
                 <ul>
                     <li><a href="#">Lorem Ipsum</a></li>
                     <li><a href="#">Lorem Ipsum</a></li>
                 </ul>
 
             </div>
-            <div class="col-md-2 list">
-                <ul>
-                    <li><a href="#">Lorem Ipsum</a></li>
-                </ul>
-
-            </div>
-            <div class="col-md-2">
-
-            </div>
-            <div class="col-md">
-                <h5><strong>Contact Info</strong></h5>
-                <p><strong>Adress:</strong> 514 S. Magnolia St.
-                    Orlando, FL 32806 <!-- Random Adress -->
-                </p>
-                <p><strong>Email:</strong> email@example.com</p>
-                <p><strong>Tel.:</strong> (888) 888 8888</p>
+            <div class="col-md-4 list">
+                <ol>
+                    <li><a href="#">Lorem Ipsum 1</a></li>
+                    <li><a href="#">Lorem Ipsum 2</a></li>
+                    <li><a href="#">Lorem Ipsum 3</a></li>
+                </ol>
             </div>
         </div>
     </div>
-
-    <div class="container">
-        <div class="row">
-            <div class="col-md text-center">
-                2018 - {{ "now"|date('Y') }}. All rights reserved ©.
-            </div>
 </footer>
