--- a/app/Resources/views/company/body.html.twig
+++ b/app/Resources/views/company/body.html.twig
@@ -1,25 +1,20 @@
-{% extends 'company/base.html.twig' %}
+{% extends 'base.html.twig' %}
+
 {% block stylesheets %}
     <link href="{{ asset('css/styles.css') }}" rel="stylesheet" />
 {% endblock %}
 
 {% block body %}
-    {% block center %}{% endblock %}
-{% endblock %}
 
-{% block navbar %}
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="#">Features</a>
-                <a class="nav-item nav-link" href="#">Pricing</a>
-                <a class="nav-item nav-link disabled" href="#">Disabled</a>
-            </div>
+    {% block navbar %}{% include 'company/_navbar.html.twig' %}{% endblock %}
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3">{% block menu %}{% endblock %}</div>
+            <div class="col-md-9">{% block center %}{% endblock %}</div>
         </div>
-    </nav>
+    </div>
+
+    {% block footer %}{% include 'company/_footer.html.twig' %}{% endblock %}
+
 {% endblock %}
