--- a/app/Resources/views/company/body.html.twig
+++ b/app/Resources/views/company/body.html.twig
@@ -1,14 +1,8 @@
 {% extends 'base.html.twig' %}
 
-{% block stylesheets %}
-    <link href="{{ asset('css/styles.css') }}" rel="stylesheet" />
-{% endblock %}
-
 {% block body %}
 
-    {% block navbar %}{% include 'company/_navbar.html.twig' %}{% endblock %}
-
-    <div class="container">
+    <div class="container" id="company_content">
         <div class="row">
             <div class="col-md-3">{% block menu %}{% endblock %}</div>
             <div class="col-md-9">{% block center %}{% endblock %}</div>
@@ -17,4 +11,11 @@
 
     {% block footer %}{% include 'company/_footer.html.twig' %}{% endblock %}
 
+    <style>
+        body {
+            padding-top: 0;
+            padding-right: 0;
+            padding-left: 0;
+        }
+    </style>
 {% endblock %}
