--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -11,12 +11,16 @@
     <link href="{{ asset('vendor/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
     <!-- Custom styles for this template -->
     <link href="{{ asset('css/modern-business.css') }}" rel="stylesheet">
+    <!-- Font awesome icons -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
 <body>
 
 {% block navbar %}{% include '_navbar.html.twig' %}{% endblock %}
 
 {% block body %}{% endblock %}
+
+{% block footer %}{% include '_footer.html.twig' %}{% endblock %}
 
 {% block javascripts %}{% endblock %}
 <!-- Bootstrap core JavaScript -->
