--- a/app/Resources/views/company/body.html.twig
+++ b/app/Resources/views/company/body.html.twig
@@ -1,21 +1,21 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-
     <div class="container" id="company_content">
         <div class="row">
             <div class="col-md-3">{% block menu %}{% endblock %}</div>
             <div class="col-md-9">{% block center %}{% endblock %}</div>
         </div>
     </div>
+{% endblock %}
 
-    {% block footer %}{% include 'company/_footer.html.twig' %}{% endblock %}
-
+{% block stylesheets %}
     <style>
         body {
             padding-top: 0;
             padding-right: 0;
             padding-left: 0;
         }
+        #company_content { padding-top: 40px; }
     </style>
 {% endblock %}
