Vid 16. Passing params through Twig to controller. Twig -> For & If.

--- a/app/Resources/views/_navbar.html.twig
+++ b/app/Resources/views/_navbar.html.twig
@@ -16,14 +16,14 @@
                     <a class="nav-link" href="#">Tapas</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown"
+                    <a class="nav-link dropdown-toggle" href="{{ path('contact') }}" id="navbarDropdownBlog" data-toggle="dropdown"
                        aria-haspopup="true" aria-expanded="false">
                         Pubs
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
-                        <a class="dropdown-item" href="#">Murcia</a>
-                        <a class="dropdown-item" href="#">Valencia</a>
-                        <a class="dropdown-item" href="#">Madrid</a>
+                        <a class="dropdown-item" href="{{ path('contact', {'location':'Murcia'}) }}">Murcia</a>
+                        <a class="dropdown-item" href="{{ path('contact', {'location':'Valencia'}) }}">Valencia</a>
+                        <a class="dropdown-item" href="{{ path('contact', {'location':'Madrid'}) }}">Madrid</a>
                     </div>
                 </li>
                 <li class="nav-item">
