--- a/app/Resources/views/default/about_us.html.twig
+++ b/app/Resources/views/default/about_us.html.twig
@@ -29,7 +29,7 @@
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam augue nunc, dignissim vitae fermentum vel, porttitor et urna. Donec a justo id nibh tincidunt molestie.</p>
                     </div>
                     <div class="card-footer">
-                        <i class="fa fa-envelope"> jesus@jesuspub.es</i>
+                        <i class="fa fa-envelope"></i><a href="mailto:jesus@jesuspub.es"> jesus@jesuspub.es</a>
                     </div>
                 </div>
             </div>
@@ -44,7 +44,7 @@
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis ipsam eos, nam perspiciatis natus commodi similique totam consectetur praesentium molestiae atque exercitationem ut consequuntur.</p>
                     </div>
                     <div class="card-footer">
-                        <i class="fa fa-envelope"> lucia@jesuspub.es</i>
+                        <i class="fa fa-envelope"></i><a href="mailto:lucia@jesuspub.es"> lucia@jesuspub.es</a>
                     </div>
                 </div>
             </div>
@@ -59,7 +59,7 @@
                         <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente esse necessitatibus neque.</p>
                     </div>
                     <div class="card-footer">
-                        <i class="fa fa-envelope"> ana@jesuspub.es</i>
+                        <i class="fa fa-envelope"></i><a href="mailto:ana@jesuspub.es"> ana@jesuspub.es</a>
                     </div>
                 </div>
             </div>
