Vid 39. Global parameters. Form & FormType. CKEditor bundle. Upload file. New controller.

--- a/app/Resources/views/_navbar.html.twig
+++ b/app/Resources/views/_navbar.html.twig
@@ -15,6 +15,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Tapas</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('newTapa') }}">New Tapa</a>
+                </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="{{ path('contact') }}" id="navbarDropdownBlog" data-toggle="dropdown"
                        aria-haspopup="true" aria-expanded="false">
