--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -52,12 +52,14 @@
             {% for tapa in tapas %}
                 <div class="col-lg-4 col-sm-6 portfolio-item">
                     <div class="card h-100">
-                        <a href="{{ path('detail', {'id':tapa.id}) }}"><img class="card-img-top" src="{{ tapa.picture }}" alt=""></a>
+                        <a href="{{ path('detail', {'id':tapa.id}) }}">
+                            <img class="card-img-top" {% if tapa.picture|length > 0 %} src="{{ asset( tapaImg ~ tapa.picture) }}"
+                            {% else %} src="http://placehold.it/700x400"{% endif %} alt=""></a>
                         <div class="card-body">
                             <h4 class="card-title">
-                                <a href="{{ path('detail', {'id':tapa.id}) }}">{{ tapa.name }}</a>
+                                <a href="{{ path('detail', {'id':tapa.id}) }}">{{ tapa.name|raw }}</a>
                             </h4>
-                            <p class="card-text">{{ tapa.description }}</p>
+                            <p class="card-text">{{ tapa.description|raw }}</p>
                         </div>
                     </div>
                 </div>
