--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -22,9 +22,9 @@
 
 {% block footer %}{% include '_footer.html.twig' %}{% endblock %}
 
-{% block javascripts %}{% endblock %}
 <!-- Bootstrap core JavaScript -->
 <script src="{{ asset('vendor/jquery/jquery.min.js') }}"></script>
 <script src="{{ asset('vendor/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
+{% block javascript %}{% endblock %}
 </body>
 </html>
