--- a/app/Resources/views/default/detail.html.twig
+++ b/app/Resources/views/default/detail.html.twig
@@ -14,14 +14,15 @@
         <div class="row">
 
             <div class="col-md-8">
-                <img class="img-fluid" src="http://placehold.it/750x500" alt="">
+                <img class="img-fluid"{%- if tapa.picture|length > 0 -%} src="{{ asset( tapaImg ~ tapa.picture) }}"
+                        {%- else -%} src="http://placehold.it/750x500" {%- endif %} alt="">
             </div>
 
             <div class="col-md-4">
-                <h3 class="my-3">{{ tapa.name }}</h3>
-                <p>{{ tapa.description }}</p>
+                <h3 class="my-3">{{ tapa.name|raw }}</h3>
+                <p>{{ tapa.description|raw }}</p>
                 <h3 class="my-3">Ingredients</h3>
-                {{ tapa.ingredients }}
+                {{ tapa.ingredients|raw }}
             </div>
 
         </div>
