Remove code from "Jesus's Pub's Project". Add navbar updated. Code clear.

--- a/app/Resources/views/coach/index.html.twig
+++ b/app/Resources/views/coach/index.html.twig
@@ -2,6 +2,8 @@
 
 {% block body %}
     <h1>Coaches list</h1>
+    <h5>Coach - Team -> OneToOne relation</h5>
+    <br>
 
     <table>
         <thead>
