--- a/app/Resources/views/team/index.html.twig
+++ b/app/Resources/views/team/index.html.twig
@@ -2,6 +2,8 @@
 
 {% block body %}
     <h1>Teams list</h1>
+    <h5>Team - Coach -> OneToOne relation</h5>
+    <br>
 
     <table>
         <thead>
