--- a/app/Resources/views/_navbar.html.twig
+++ b/app/Resources/views/_navbar.html.twig
@@ -9,28 +9,34 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ path('about_us') }}">About us</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Tapas</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ path('newTapa') }}">New Tapa</a>
-                </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="{{ path('contact') }}" id="navbarDropdownBlog" data-toggle="dropdown"
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog" data-toggle="dropdown"
                        aria-haspopup="true" aria-expanded="false">
-                        Pubs
+                        Def controller
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
-                        <a class="dropdown-item" href="{{ path('contact', {'location':'Murcia'}) }}">Murcia</a>
-                        <a class="dropdown-item" href="{{ path('contact', {'location':'Valencia'}) }}">Valencia</a>
-                        <a class="dropdown-item" href="{{ path('contact', {'location':'Madrid'}) }}">Madrid</a>
+                        <a class="dropdown-item" href="{{ path('response') }}">Response</a>
+                        <a class="dropdown-item" href="{{ path('args_twig') }}">Argument</a>
+                        <a class="dropdown-item" href="{{ path('redirection') }}">Redirection</a>
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Ask for a table</a>
+                    <a class="nav-link" href="{{ path('category_index') }}">Category</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('event_index') }}">Events</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('coach_index') }}">Coach</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('team_index') }}">Team</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('company_index') }}">Company</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('user_index') }}">Login</a>
                 </li>
             </ul>
         </div>
