--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -18,7 +18,9 @@
 
 {% block navbar %}{% include '_navbar.html.twig' %}{% endblock %}
 
-{% block body %}{% endblock %}
+<div class="container">
+    {% block body %}{% endblock %}
+</div>
 
 {% block footer %}{% include '_footer.html.twig' %}{% endblock %}
 
