--- a/app/Resources/views/category/index.html.twig
+++ b/app/Resources/views/category/index.html.twig
@@ -2,6 +2,8 @@
 
 {% block body %}
     <h1>Categories list</h1>
+    <h5>Category - Events -> OneToMany relation</h5>
+    <br>
 
     <table>
         <thead>
