--- a/app/Resources/views/event/all.html.twig
+++ b/app/Resources/views/event/all.html.twig
@@ -1,7 +1,14 @@
-All the events.
+{% extends 'base.html.twig' %}
+
+{% block body %}
+    <h1>All the events.</h1>
+    <h5>Events - Category -> ManyToOne relation</h5>
+    <br>
 
 <ul id="events">
     {% for event in events %}
         <li>{{ event.name }}</li>
     {% endfor %}
 </ul>
+
+{% endblock %}
